# string-namd

./: .gitignore  6VJM_namd_string.template  README.md  plot_strings.py  pyproject.toml  string_optimize_namd.py
examples/: config_example.yaml
string_namd/: __init__.py  cli.py  config.py  io.py  namd_runner.py  optimizer.py
string_namd/string_namd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
string_namd/templates/: 6VJM_colvars_string.template  colvars.template  namd.template
tests/: conftest.py  test_config.py  test_io.py  test_namd_runner.py  test_optimizer.py
